chore: fix warnings in test classes